Project

General

Profile

Actions

Bug #12332

closed

[PATCH] proc.c: fix RDoc of Proc#===/call/yield/[]

Bug #12332: [PATCH] proc.c: fix RDoc of Proc#===/call/yield/[]

Added by normalperson (Eric Wong) over 10 years ago. Updated over 10 years ago.

Status:
Closed
Assignee:
-
Target version:
-
[ruby-core:75256]

Description

Since r52050 ("proc.c: enable optimization of Proc#call")
for [Feature #11569], we need to maintain this documentation
in a way RDoc comprehends. This is probably not worth fixing
in RDoc itself since this uses a non-standard internal C API.

(links don't seem active, yet, due to ML delays)
http://mid.gmane.org/20160429212836.GA16605@dcvr.yhbt.net
http://mid.gmane.org/1461959651.806728.670.51764@mail.rambler.ru
http://blade.nagaokaut.ac.jp/ruby/ruby-talk/435458

I will commit in a week unless there's a better idea to fix
the doc than this patch. This affects 2.3+, so a backport
there is needed.


Files


Related issues 2 (0 open2 closed)

Related to Ruby - Feature #11569: Optimize Proc#callClosedko1 (Koichi Sasada)Actions
Related to Ruby - Bug #12099: Documentation for Proc#call and Proc#[] missing from Ruby-Doc.Org.ClosedActions
Actions

Also available in: PDF Atom